<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:paddingStart="@dimen/x30"
        android:paddingTop="@dimen/x20"
        android:paddingEnd="@dimen/x30"
        android:paddingBottom="@dimen/x20"
        android:text="@string/my_older_password_label"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/older_password"
        android:background="@drawable/bg_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/x30"
        android:paddingTop="@dimen/x4"
        android:paddingEnd="@dimen/x30"
        android:paddingBottom="@dimen/x10"
        android:singleLine="true"
        android:hint="@string/my_older_password_tip"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/x30"
        android:paddingTop="@dimen/x20"
        android:paddingEnd="@dimen/x30"
        android:paddingBottom="@dimen/x20"
        android:text="@string/my_new_password_label"/>

    <EditText
        android:id="@+id/new_password"
        android:background="@drawable/bg_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/x30"
        android:paddingTop="@dimen/x4"
        android:paddingEnd="@dimen/x30"
        android:paddingBottom="@dimen/x10"
        android:hint="@string/my_older_password_tip"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x50"
        android:text="@string/my_change_password_confirm"
        android:textColor="@color/white"
        android:background="@drawable/btn_solid_blue_bg"/>






</LinearLayout>