<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@mipmap/welcome_bg"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/btn_jump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center|right|top"
        android:layout_marginStart="15.0dip"
        android:layout_marginTop="15.0dip"
        android:layout_marginEnd="15.0dip"
        android:layout_marginBottom="15.0dip"
        android:background="@drawable/shape_88fffff_r"
        android:gravity="center"
        android:paddingLeft="@dimen/x30"
        android:paddingTop="@dimen/x15"
        android:paddingRight="@dimen/x30"
        android:paddingBottom="@dimen/x15"
        android:text="跳过"
        android:textColor="@color/textColor_333333"
        android:textSize="@dimen/x36" />

    <TextView
        android:id="@+id/txt_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="15.0dip"
        android:layout_marginTop="@dimen/x450"
        android:layout_marginEnd="15.0dip"
        android:layout_marginBottom="55.0dip"
        android:background="@drawable/shape_88fffff_r"
        android:gravity="center"
        android:text="@string/login_get_token"
        android:textColor="@color/textColor_333333"
        android:textSize="@dimen/font_14" />

    <ProgressBar
        android:id="@+id/pb_loading"
        style="@android:style/Widget.ProgressBar.Small.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/x450"
        android:layout_toLeftOf="@id/txt_loading"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_retry_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pb_loading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x20"
        android:background="@drawable/round_corner_blue"
        android:paddingLeft="@dimen/x15"
        android:paddingRight="@dimen/x15"
        android:text="@string/login_get_token_again"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_set_server_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_retry_token"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x40"
        android:background="@drawable/round_corner_blue"
        android:paddingLeft="@dimen/x15"
        android:paddingRight="@dimen/x15"
        android:text="@string/login_set_server_url"
        android:textColor="@color/white"
        android:textSize="@dimen/font_14"
        android:visibility="gone" />
</RelativeLayout>